Increase perspective to prevent scrollbars appearing during animation

--- a/src/_scss/modules/_footer.scss
+++ b/src/_scss/modules/_footer.scss
@@ -63,7 +63,7 @@
   @include respond-to('small') {
     float: right;
     width: 40%;
-    perspective: 2500px;
+    perspective: 3000px;
   }
   @include respond-to('large') {
     &:hover {
